Modify footer quick link - link per column Fix Stay connected alignment Remove extra gap above copyright

--- a/assets/section-footer.css
+++ b/assets/section-footer.css
@@ -42,7 +42,7 @@
 
 .footer__content-bottom {
   border-top: solid 0.1rem rgba(var(--color-foreground), 0.08);
-  padding-top: 3rem;
+  padding-top: 0;
 }
 
 .footer__content-bottom:only-child {
@@ -314,6 +314,8 @@
 
 .footer-block__details-content {
   margin-bottom: 4rem;
+  display: flex;
+  justify-content: space-between;
 }
 
 @media screen and (min-width: 750px) {
@@ -370,10 +372,6 @@
     display: inline-block;
     font-size: 1.4rem;
   }
-
-  .footer-block__details-content > :first-child .list-menu__item--link {
-    padding-top: 0;
-  }
 }
 
 .footer-block-image {
@@ -413,7 +411,10 @@
 }
 
 .footer-block__brand-info {
-  text-align: left;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 
 .footer-block:only-child .footer-block__brand-info {
